--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,93 +2,316 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Animal Classifier</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Potato Disease Classifier</title>
   <style>
+    /* Global Styles */
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f7f9fc;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    header {
       text-align: center;
-      background: #f8f6ff;
-      padding: 40px;
+      padding: 2rem;
+      background: linear-gradient(135deg, #667eea, #764ba2);
+      color: white;
     }
-    .upload-box {
-      border: 2px dashed #9c6ade;
-      border-radius: 20px;
-      padding: 40px;
-      width: 400px;
-      margin: 20px auto;
-      background: #fff;
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      margin-top: 0.5rem;
+      opacity: 0.9;
+    }
+
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2rem;
+      padding: 2rem;
+      flex: 1;
+    }
+
+    .card {
+      background: white;
+      padding: 2rem;
+      border-radius: 15px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      width: 350px;
+      text-align: center;
+      transition: transform 0.2s;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+    }
+
+    /* Upload Section */
+    .upload-section input {
+      display: none;
+    }
+
+    .upload-btn {
+      background: linear-gradient(135deg, #667eea, #764ba2);
+      color: white;
+      padding: 12px 25px;
+      border-radius: 10px;
       cursor: pointer;
-    }
-    button {
-      margin-top: 15px;
-      padding: 10px 20px;
+      font-size: 1rem;
       border: none;
-      background: #9c6ade;
-      color: #fff;
-      font-size: 16px;
-      border-radius: 8px;
+      transition: background 0.3s;
+    }
+
+    .upload-btn:hover {
+      background: linear-gradient(135deg, #5a67d8, #6b46c1);
+    }
+
+    .image-preview {
+      margin-top: 1rem;
+      width: 100%;
+      max-height: 200px;
+      object-fit: contain;
+      border-radius: 10px;
+      display: none;
+    }
+
+    /* Result Section */
+    .result-details {
+      text-align: left;
+    }
+
+    .confidence-bar {
+      width: 100%;
+      height: 12px;
+      background: #e0e0e0;
+      border-radius: 6px;
+      margin: 10px 0;
+    }
+
+    .confidence-fill {
+      height: 100%;
+      background: #667eea;
+      border-radius: 6px;
+      width: 0%;
+      transition: width 0.5s ease;
+    }
+
+    /* Chatbot */
+    .chatbot-container {
+      background: white;
+      border-top: 2px solid #eee;
+      padding: 1.5rem;
+      max-width: 800px;
+      margin: 2rem auto;
+      border-radius: 15px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    .chat-header {
+      font-size: 1.3rem;
+      margin-bottom: 1rem;
+      color: #764ba2;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    .chat-box {
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      height: 300px;
+      padding: 1rem;
+      overflow-y: auto;
+      background: #fafafa;
+      margin-bottom: 1rem;
+    }
+
+    .chat-message {
+      margin: 0.5rem 0;
+      padding: 0.7rem 1rem;
+      border-radius: 10px;
+      max-width: 75%;
+      line-height: 1.4;
+    }
+
+    .bot-message {
+      background: #e6e6ff;
+      color: #333;
+      align-self: flex-start;
+    }
+
+    .user-message {
+      background: #667eea;
+      color: white;
+      align-self: flex-end;
+      margin-left: auto;
+    }
+
+    .chat-input {
+      display: flex;
+      gap: 0.5rem;
+    }
+
+    .chat-input input {
+      flex: 1;
+      padding: 0.7rem;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+    }
+
+    .chat-input button {
+      background: #764ba2;
+      color: white;
+      padding: 0.7rem 1.2rem;
+      border: none;
+      border-radius: 10px;
       cursor: pointer;
     }
-    button:hover {
-      background: #7a4ed9;
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      background: #f1f1f1;
+      margin-top: auto;
     }
-    #preview {
-      margin-top: 20px;
-      max-width: 300px;
-      border-radius: 12px;
-      box-shadow: 0px 2px 8px rgba(0,0,0,0.2);
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .container {
+        flex-direction: column;
+        align-items: center;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>🥔 Potato Disease Classification</h1>
-  
-  <form id="uploadForm">
-    <div class="upload-box" onclick="document.getElementById('fileInput').click()">
-      <p>Drag & drop image<br>or click to select</p>
-      <input type="file" id="fileInput" name="file" style="display:none;" accept="image/*">
+  <!-- HEADER -->
+  <header>
+    <h1>🥔 Potato Disease Classifier</h1>
+    <p>Upload a plant leaf image to detect disease with AI-powered explanations</p>
+  </header>
+
+  <!-- MAIN CONTENT -->
+  <main class="container">
+    <!-- Upload Card -->
+    <section class="card upload-section">
+      <h2>Upload Leaf Image</h2>
+      <label for="fileInput" class="upload-btn">Choose File</label>
+      <input type="file" id="fileInput" accept="image/*" />
+      <img id="imagePreview" class="image-preview" />
+      <button class="upload-btn" onclick="submitImage()">Predict Disease</button>
+    </section>
+
+    <!-- Results Card -->
+    <section id="result" class="card result-section">
+      <h2>Results</h2>
+      <div class="result-details">
+        <h3>Prediction: <span id="predictedLabel">-</span></h3>
+        <div class="confidence-bar">
+          <div class="confidence-fill" id="confidenceBar"></div>
+        </div>
+        <p><strong>Confidence:</strong> <span id="confidenceValue">-</span></p>
+        <p><strong>Explanation:</strong></p>
+        <p id="explanationText">-</p>
+      </div>
+    </section>
+  </main>
+
+  <!-- CHATBOT -->
+  <section class="chatbot-container">
+    <div class="chat-header">💬 Plant Doctor Assistant</div>
+    <div class="chat-box" id="chatBox">
+      <div class="chat-message bot-message">Hello! I can help explain plant diseases. Upload a leaf first or ask me something!</div>
     </div>
-    <button type="submit">Upload & Predict</button>
-  </form>
+    <div class="chat-input">
+      <input type="text" id="chatInput" placeholder="Ask about plant diseases..." />
+      <button onclick="sendMessage()">Send</button>
+    </div>
+  </section>
 
-  <div id="result"></div>
-  <img id="preview" />
+  <!-- FOOTER -->
+  <footer>
+    Built with ❤️ using FastAPI + TensorFlow
+  </footer>
 
+  <!-- JS (keep your existing logic, just update DOM IDs if needed) -->
   <script>
-    const fileInput = document.getElementById('fileInput');
-    const form = document.getElementById('uploadForm');
-    const resultDiv = document.getElementById('result');
-    const preview = document.getElementById('preview');
+    const fileInput = document.getElementById("fileInput");
+    const imagePreview = document.getElementById("imagePreview");
+    const predictedLabel = document.getElementById("predictedLabel");
+    const confidenceValue = document.getElementById("confidenceValue");
+    const explanationText = document.getElementById("explanationText");
+    const confidenceBar = document.getElementById("confidenceBar");
+    const chatBox = document.getElementById("chatBox");
+    const chatInput = document.getElementById("chatInput");
 
-    fileInput.addEventListener('change', () => {
-      const file = fileInput.files[0];
+    fileInput.addEventListener("change", (event) => {
+      const file = event.target.files[0];
       if (file) {
-        preview.src = URL.createObjectURL(file);
+        const reader = new FileReader();
+        reader.onload = (e) => {
+          imagePreview.src = e.target.result;
+          imagePreview.style.display = "block";
+        };
+        reader.readAsDataURL(file);
       }
     });
 
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const file = fileInput.files[0];
-      if (!file) {
-        alert("Please select an image!");
+    async function submitImage() {
+      if (!fileInput.files.length) {
+        alert("Please select a file first!");
         return;
       }
-
+      const file = fileInput.files[0];
       const formData = new FormData();
       formData.append("file", file);
 
-      try {
-        const response = await fetch("http://127.0.0.1:8000/predict/", {
-          method: "POST",
-          body: formData
+      const response = await fetch("http://127.0.0.1:8000/predict", {
+        method: "POST",
+        body: formData,
+      });
+
+      const result = await response.json();
+      predictedLabel.textContent = result.prediction;
+      confidenceValue.textContent = (result.confidence * 100).toFixed(2) + "%";
+      confidenceBar.style.width = (result.confidence * 100) + "%";
+      explanationText.textContent = result.chatbot_answer;
+    }
+
+    function sendMessage() {
+      const userText = chatInput.value.trim();
+      if (!userText) return;
+
+      addMessage(userText, "user");
+
+      fetch(`http://127.0.0.1:8000/chatbot?query=${encodeURIComponent(userText)}`)
+        .then((res) => res.json())
+        .then((data) => {
+          addMessage(data.answer, "bot");
         });
-        const data = await response.json();
-        resultDiv.innerHTML = `<h2>Prediction: ${data.prediction} (Confidence: ${data.confidence})</h2>`;
-      } catch (err) {
-        resultDiv.innerHTML = `<p style="color:red;">Error: ${err}</p>`;
-      }
-    });
+
+      chatInput.value = "";
+    }
+
+    function addMessage(text, sender) {
+      const msg = document.createElement("div");
+      msg.classList.add("chat-message", sender === "user" ? "user-message" : "bot-message");
+      msg.textContent = text;
+      chatBox.appendChild(msg);
+      chatBox.scrollTop = chatBox.scrollHeight;
+    }
   </script>
 </body>
 </html>
